--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,11 @@ body {
    text-decoration: none;
 }
 
+.container a:link{
+   text-decoration: none;
+   color: purple;
+}
+
 .container a:hover{
    background-color: purple;
    color: white;
