--- a/assets/style.css
+++ b/assets/style.css
@@ -63,3 +63,12 @@ body {
    font-size: 10px;
    text-align: center;
 }
+
+.navbar {
+   padding-top: 50%;
+   border: 2px solid purple;
+   padding: 5px;
+   background-color: darkorchid;
+   border-style: none none solid none;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
